Fixed the resizing so that on smaller width viewports, the projects fit on screen, are still centered, remain evenly spaced (though some of the spacing has a jump at teh breakpoint of 550px, but this is such a minor thing I may just leave it), and the font-size also scales with width (this one with no jump cause its important). Also, past the breakpoint, the height of the projects are just as tall as they need to be to comfortably fit in all the text. It could be worth adding this before the breakpoint just when the projects end up in a single column, but, again, its so minor that I can probably just leave it.

--- a/project-styles.css
+++ b/project-styles.css
@@ -34,12 +34,12 @@ body {
 }
 
 .project-list a:active {
-  transform: scale(1.15);
+  transform: scale(1.1);
 }
 
 .project-list img {
   width: var(--project-width);
-  height: 300px;
+  aspect-ratio: 5/3;
   border-radius: var(--project-border-radius) var(--project-border-radius) 0px 0px;
   object-fit: cover;
   border-bottom: var(--project-border);
@@ -51,5 +51,22 @@ body {
 
 .project-list p {
   margin-left: var(--project-text-left-margin);
-  padding-bottom: 10px;
+  padding-bottom: 20px;
+}
+
+/* For screens less than 550 px wide. */
+@media screen and (max-width: 550px) {
+  .project-list {
+    display: block;
+  }
+
+  .project-list a, .project-list img {
+    font-size: 2.914vw;
+    width: 90.909090vw;
+  }
+
+  .project-list a {
+    aspect-ratio: auto;
+    height: auto;
+  }
 }
